# rsdos

./: .gitignore  Cargo.toml  Design.md  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci-rust.yml  ci.yml  crate-publish.yml  nightly.yml  pypi-publish.yml  release.yml
crates/pyrsdos/: Cargo.toml  pyproject.toml
crates/pyrsdos/.cargo/: config.toml
crates/pyrsdos/python/rsdos/: __init__.py
crates/pyrsdos/src/: lib.rs
crates/pyrsdos/tests/: conftest.py  test_benchmark.py  test_benchmark_loose.py  test_benchmark_packs.py  test_container.py
crates/pyrsdos/tests/benchmark/: test_pack_loose.py  test_packs.py
crates/rsdos/: .gitignore  Cargo.toml
crates/rsdos/examples/: batch_loose_read.rs  batch_loose_rw.rs  batch_pack_all_loose.rs  batch_pack_loose.rs  batch_packs_read.rs  batch_packs_rw.rs  batch_packs_write.rs
crates/rsdos/src/: lib.rs  main.rs
crates/rsdos/src/libs/: add_file.rs  cli.rs  config.rs  container.rs  db.rs  error.rs  io.rs  io_loose.rs  io_packs.rs  maintain.rs  object.rs  status.rs  test_utils.rs  utils.rs
crates/rsdos/tests/: lifecycle.rs
crates/rsdos/tests/common/: mod.rs
examples/: batch_packs_rw.rs
python/: Cargo.toml  pyproject.toml
python/.github/workflows/: CI.yml
python/benchmark/: conftest.py  test_loose.py  test_pack_loose.py  test_packs.py
python/rsdos/: __init__.py
python/src/: lib.rs
python/tests/: conftest.py  test_container.py  test_loose.py  test_pack_loose.py  test_packs.py
python/tests/benchmark/: test_pack_loose.py  test_packs.py
rust/: Cargo.toml
rust/src/libs/: cli.rs  error.rs  io_loose.rs  io_packs.rs  maintain.rs  test_utils.rs  utils.rs
rust/tests/common/: mod.rs
src/: add_files.rs  config.rs  init.rs  lib.rs  main.rs  status.rs  utils.rs
src/libs/: add_file.rs  add_files.rs  cli.rs  config.rs  container.rs  db.rs  init.rs  io.rs  io_loose.rs  io_packs.rs  maintain.rs  object.rs  status.rs  test_utils.rs
tests/: lifecycle.rs
