[package]
name = "disk-objectstore-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
fallible-streaming-iterator = "0.1.9"
hex = "0.4.3"
hex-literal = "0.4.1"
human_bytes = { version = "0.4.3", features = ["fast"] }
indicatif = "0.17.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[[bin]]
name = "rdos"
path = "src/main.rs"
