[workspace]
members = [
  "crates/rsdos",
  "python",
]
default-members = [
  "crates/rsdos"
]

resolver = "2"

[workspace.package]
authors = ["Jusong Yu <jusong.d.yu@gmail.com>"]
rust-version = "1.76.0"
edition = "2021"

[profile.release]
panic = "abort"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
overflow-checks = false
lto = "fat"
