[package]
name = "rsdos"
version = "0.1.0"
description = "key-value store for file I/O on disk"
authors = ["Jusong Yu <jusong.d.yu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/unkcpz/rsdos"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"
edition = "2021"
exclude = [
    "misc/*",
    "python/*",
]

[dependencies]
anyhow = "1.0.86"
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive"] }
fallible-streaming-iterator = "0.1.9"
flate2 = { version = "1.0.35", features = ["zlib-ng"] }
hex = "0.4.3"
human_bytes = { version = "0.4.3", features = ["fast"] }
indicatif = "0.17.9"
ring = "0.17.8"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.15.0"
thiserror = "2.0.11"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
zstd = "0.13.2"

[[bin]]
name = "rsdos"
path = "src/main.rs"

[lib]
name = "rsdos"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8.5"
rstest = "0.22.0"

[profile.release]
panic = "abort"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
overflow-checks = false
lto = "fat"
