[package]
name = "pyrsdos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsdos"
crate-type = ["cdylib"]

[dependencies]
rsdos = { path = "../rust" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py39", "anyhow", "auto-initialize"] }
pyo3-file = "0.8.1"


[package.metadata.maturin]
python-source = "rsdos"
