[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rsdos"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "disk-objectstore~=1.1",
  "pytest~=8.3",
  "pytest-memray~=1.7",
  "pytest-benchmark~=4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
