[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rsdos"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest~=8.3",
]

bench = [
  "disk-objectstore~=1.1",
  "pytest-benchmark~=4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[tool.uv]
dev-dependencies = ["pip", "pytest>=8.0.2", "ruff>=0.8.0", "pre-commit>=4.0.1"]
