[package]
name = "rsdos"
version = "0.1.0"
description = "key-value store for file I/O on disk"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bytes = "1.7.1"
clap = { version = "4.5.9", features = ["derive"] }
fallible-streaming-iterator = "0.1.9"
flate2 = { version = "1.0.31", features = ["zlib-ng"] }
hex = "0.4.3"
hex-literal = "0.4.1"
human_bytes = { version = "0.4.3", features = ["fast"] }
indicatif = "0.17.8"
once_cell = "1.19.0"
ring = "0.17.8"
rusqlite = "0.32.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sled = "0.34.7"
tempfile = "3.10.1"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zstd = "0.13.2"

[[bin]]
name = "rsdos"
path = "src/main.rs"

[lib]
name = "rsdos"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8.5"
rstest = "0.22.0"


